--- a/Humpback/Humpback.vcxproj.filters
+++ b/Humpback/Humpback.vcxproj.filters
@@ -33,6 +33,12 @@
     <ClInclude Include="HumpbackHelper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="d3dx12.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="d3d12.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Humpback.cpp">
