--- a/Humpback/Humpback.vcxproj
+++ b/Humpback/Humpback.vcxproj
@@ -121,6 +121,12 @@
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
+    <FxCompile>
+      <EntryPointName>VSMain</EntryPointName>
+      <ShaderModel>5.1</ShaderModel>
+      <ShaderType>Vertex</ShaderType>
+      <EnableDebuggingInformation>false</EnableDebuggingInformation>
+    </FxCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
