Create box model data.

--- a/Humpback/Humpback.vcxproj
+++ b/Humpback/Humpback.vcxproj
@@ -151,6 +151,7 @@
     </FxCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Box.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="d3d12.h" />
     <ClInclude Include="D3DUtil.h" />
@@ -159,6 +160,7 @@
     <ClInclude Include="HumpbackHelper.h" />
     <ClInclude Include="Humpback.h" />
     <ClInclude Include="Mesh.h" />
+    <ClInclude Include="Renderable.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
@@ -167,10 +169,13 @@
     <ClInclude Include="Vertex.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Box.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Humpback.cpp" />
     <ClCompile Include="HumpbackMathHelper.cpp" />
     <ClCompile Include="HumpbackMathHelper.h" />
+    <ClCompile Include="Mesh.cpp" />
+    <ClCompile Include="Renderable.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="Timer.cpp" />
   </ItemGroup>
