--- a/Humpback/Humpback.vcxproj.filters
+++ b/Humpback/Humpback.vcxproj.filters
@@ -86,6 +86,9 @@
     <ClCompile Include="D3DUtil.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="HMathHelper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Humpback.rc">
