--- a/Humpback/Humpback.vcxproj.filters
+++ b/Humpback/Humpback.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClInclude Include="HEngineConfig.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GeometryGenetator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Humpback.cpp">
@@ -93,6 +96,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Timer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GeometryGenetator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
