--- a/Humpback/Humpback.vcxproj
+++ b/Humpback/Humpback.vcxproj
@@ -170,6 +170,7 @@
     <ClInclude Include="Timer.h" />
     <ClInclude Include="UploadBufferHelper.h" />
     <ClInclude Include="Vertex.h" />
+    <ClInclude Include="Waves.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Camera.cpp" />
@@ -180,6 +181,7 @@
     <ClCompile Include="Humpback.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="Timer.cpp" />
+    <ClCompile Include="Waves.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Humpback.rc" />
