--- a/Humpback/Humpback.vcxproj
+++ b/Humpback/Humpback.vcxproj
@@ -160,6 +160,7 @@
     <ClInclude Include="GeometryGenetator.h" />
     <ClInclude Include="HEngineConfig.h" />
     <ClInclude Include="HMathHelper.h" />
+    <ClInclude Include="Light.h" />
     <ClInclude Include="Material.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="HumpbackHelper.h" />
