--- a/Humpback/Humpback.vcxproj
+++ b/Humpback/Humpback.vcxproj
@@ -125,7 +125,8 @@
       <AdditionalDependencies>dxgi.lib;dxguid.lib;D3DCompiler.lib;D3D12.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <FxCompile>
-      <EntryPointName>VSMain</EntryPointName>
+      <EntryPointName>
+      </EntryPointName>
       <ShaderModel>5.0</ShaderModel>
       <ShaderType>Vertex</ShaderType>
       <EnableDebuggingInformation>false</EnableDebuggingInformation>
@@ -194,12 +195,17 @@
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="Shaders\SimpleShader.hlsl">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Vertex</ShaderType>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</DeploymentContent>
       <FileType>Document</FileType>
     </CustomBuild>
+  </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="Shaders\Lighting.hlsl">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </FxCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
