--- a/Humpback/Humpback.vcxproj.filters
+++ b/Humpback/Humpback.vcxproj.filters
@@ -132,4 +132,9 @@
       <Filter>Shaders</Filter>
     </CustomBuild>
   </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="Shaders\Lighting.hlsl">
+      <Filter>Shaders</Filter>
+    </FxCompile>
+  </ItemGroup>
 </Project>
