--- a/Humpback/Humpback.vcxproj.filters
+++ b/Humpback/Humpback.vcxproj.filters
@@ -145,10 +145,10 @@
     <FxCompile Include="Shaders\Lighting.hlsl">
       <Filter>Shaders</Filter>
     </FxCompile>
-    <FxCompile Include="Sky.hlsl">
+    <FxCompile Include="Shaders\Common.hlsl">
       <Filter>Shaders</Filter>
     </FxCompile>
-    <FxCompile Include="Common.hlsl">
+    <FxCompile Include="Shaders\Sky.hlsl">
       <Filter>Shaders</Filter>
     </FxCompile>
   </ItemGroup>
