--- a/Humpback/Humpback.vcxproj
+++ b/Humpback/Humpback.vcxproj
@@ -171,6 +171,7 @@
     <ClInclude Include="RenderableObject.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="ShadowMap.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="Timer.h" />
@@ -187,6 +188,7 @@
     <ClCompile Include="HMathHelper.cpp" />
     <ClCompile Include="Humpback.cpp" />
     <ClCompile Include="Renderer.cpp" />
+    <ClCompile Include="ShadowMap.cpp" />
     <ClCompile Include="Timer.cpp" />
     <ClCompile Include="Waves.cpp" />
   </ItemGroup>
